add: support for sentence annotations.